tests/compile_fail/invalid_body_after_substitution.stderr
error: failed to parse delegate arm entry
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^

error: expected associated syntax item
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^

error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^

error: expected one of: identifier, `::`, `<`, `_`, literal, `const`, `ref`, `mut`, `&`, parentheses, square brackets, `..`, `const`
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^

error: expected an expression
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:21
   |
11 |             E::{ A: ??, B: ?? } => {
   |                     ^

error: expected identifier
  --> tests/compile_fail/invalid_body_after_substitution.rs:11:16
   |
11 |             E::{ A: ??, B: ?? } => {
   |                ^
